tests/miniJava/neg/004353_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public if java ( ) { return 0 ; } }
